Fixed floating pricing cards on mobile screens

--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -6,6 +6,12 @@
   min-height: 400px;
 }
 
+@media (max-width: 767px) {
+  .thumbnail {
+    min-height: 425px;
+  }
+}
+
 .thumbnail:hover {
   border-color: #0080c8;
 }
